<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity"
    android:orientation="vertical"
    android:layout_margin="18dp"
>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|start"

        android:textColor="@color/white"
        android:background="#570277"
        android:hint="@string/topic_feedback"
        android:inputType="textEmailSubject"
        android:textColorHint="@color/white"
        android:paddingHorizontal="18dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/email_feedback"

        android:textColor="@color/white"
        android:background="#570277"
        android:gravity="center|start"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="18dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="#570277"

        android:gravity="center|start"
        android:hint="@string/feedback"
        android:paddingHorizontal="18dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/sendFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/magenta"
        android:paddingHorizontal="18dp"
        android:text="@string/send"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="325dp" />


</LinearLayout>