<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screen_bg"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/imuse_logo" />

    <TextView
        android:id="@+id/imuse"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="0.5dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="2sp"
        android:layout_marginBottom="5sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:lineSpacingExtra="12sp"
        android:text="IMUSE"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/magenta"
        android:textSize="40sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imuse"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="Sign In"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/entdet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="Please Enter Correct Details To Sign In"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_below="@id/entdet"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/pup"
        android:backgroundTint="@color/pup"
        android:ems="20"
        android:hint="@string/email"
        android:padding="15dp"
        android:textAlignment="textStart"

        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LoginPwdTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/emailLogin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"

        android:background="@color/pup"
        app:boxBackgroundColor="@color/pup"
        android:textColorHint="@color/white"

        android:hint="@string/password"
        android:textSize="20sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/magenta"
        >

        <com.google.android.material.textfield.TextInputEdit
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgotPwd_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"


        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"

        android:layout_marginBottom="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/magenta"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/LoginPwdTv"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="@color/magenta"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/newmem"

        android:layout_width="600dp"
        android:layout_height="50dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="182dp">

        <TextView
            android:id="@+id/dont"
            android:layout_width="140dp"
            android:layout_height="40dp"


            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"

            android:text=" Need an account ? "
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="110dp"
            android:layout_height="40dp"


            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="68dp"
            android:layout_marginBottom="110dp"
            android:layout_toEndOf="@+id/dont"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/magenta"
            android:textSize="15sp"
            app:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>