<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"


    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/imuse_logo" />

    <TextView
        android:id="@+id/imuse"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"

        android:layout_marginLeft="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2sp"
        android:layout_marginBottom="5sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:lineSpacingExtra="12sp"

        android:text="IMUSE"
        android:textColor="@color/magenta"
        android:textSize="40sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:background="#83DCD1D1">


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="264dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"

        android:layout_marginTop="127dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/Fgheader"
        android:layout_width="600dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView"

        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-29dp"

        android:text="Enter Email Address for sending request to reset your password "
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#090000"
        android:textSize="18dp"
        app:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/emailForgot"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Fgheader"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:background="#9903BA"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailForgot"
        android:layout_alignEnd="@+id/emailForgot"
        android:textColor="@color/white"


        android:layout_marginTop="65dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#EF005F"
        android:text="@string/reset_password" />

</RelativeLayout>