<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="PlayerActivity"
    android:orientation="vertical"
    android:gravity="right"

    >

    <!--More button layout-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/more_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:src="@drawable/more_vertical_icon"
            />
    </LinearLayout>

    <!--Music Image Layout-->

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:src="@drawable/song_display"
        app:shapeAppearanceOverlay="@style/rounded_square"
        android:layout_marginBottom="65dp"
        />

    <!--Song Name layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"

        >

        <TextView
            android:id="@+id/songNamePA"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/song_name"

            android:textSize="28dp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <!--SeekBar layout-->

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarPA"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="20"
        android:progressDrawable="@drawable/seek_bg"
        android:thumbTint="@color/white" />

    <!--Duration layout-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/start_tv"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/end_tv"
            android:textColor="@color/grey"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--Play buttons layout-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/share_icon"
            app:iconSize="26dp"
            app:iconTint="@color/grey" />


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/rewind_play"
            app:iconSize="48dp"
            app:iconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/pause_icon"
            app:iconSize="68dp"
            app:iconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/forward_play"
            app:iconSize="48dp"
            app:iconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/repeat_icon"
            app:iconSize="26dp"
            app:iconTint="@color/grey" />
    </LinearLayout>

    <!--Other buttons layout-->

    <RelativeLayout
        android:layout_width="297dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/favourite_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/favourite1" />

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"

            android:layout_marginEnd="40dp"
            android:background="@drawable/equilizer_icon"
            android:gravity="right" />

    </RelativeLayout>

</LinearLayout>



